# tuxproc

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: TuxProcConfig.cmake.in  tuxproc.pc.cmakein
demo/: README.md
demo/dummy/: makefile  test.cpp
demo/remote/: makefile  remote.cpp
docs/: annotated.html  annotated_dup.js  class_tux_proc_1_1_process-members.html  class_tux_proc_1_1_process.html  class_tux_proc_1_1_process.js  class_tux_proc_1_1_region-members.html  class_tux_proc_1_1_region.html  class_tux_proc_1_1_region.js  classes.html  dir_d328eab022aecca8ee55c02040e03a9a.html  dir_d328eab022aecca8ee55c02040e03a9a.js  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  files.html  functions.html  functions_func.html  functions_rela.html  index.html  menudata.js  namespace_tux_proc.html  namespace_tux_proc.js  namespaces.html  namespaces_dup.js  navtreedata.js  navtreeindex0.js  process_8h.html  process_8h_source.html  region_8h.html  region_8h_source.html
docs/search/: all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  classes_0.js  classes_1.js  files_1.js  functions_0.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  related_0.js  searchdata.js
include/tuxproc/: process.h  region.h
src/: process.cpp  region.cpp
